[package]
authors = ['Unique One <hello@uniqueone.network>']
description = 'Unique One Appchain Runtime.'
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'uniqueone-appchain-runtime'
publish = false
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.5.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '2.2', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
hex-literal = { version = '0.3.4', default-features = false, optional = true }
log = { version = '0.4' }

# Substrate Dependencies
## Substrate Primitive Dependencies
beefy-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

## Substrate Frame Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false, optional = true }
frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-beefy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-beefy-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-im-online = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-mmr-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false, features = ['historical'] }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-proxy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-democracy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-society = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-identity = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-contracts = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-contracts-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-uniques = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.13', default-features = false }
pallet-octopus-lpos = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.13', default-features = false }
pallet-octopus-upward-messages = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.13', default-features = false }

# Frontier Dependencies
## Frontier Primitive Dependencies
fp-evm = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
fp-rpc = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }

## Frontier Pallet Dependencies
pallet-base-fee = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-ethereum = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm-precompile-blake2 = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm-precompile-bn128 = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm-precompile-dispatch = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm-precompile-modexp = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm-precompile-sha3fips = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }
pallet-evm-precompile-simple = { git = 'https://github.com/purestake/frontier', branch = 'moonbeam-polkadot-v0.9.13', default-features = false }

# Local Dependencies
## Unet Pallet Dependencies
unet-orml-tokens = {  path = '../pallets/unet-orml-tokens', default-features = false }
unet-orml-traits = {  path = '../pallets/unet-orml-traits', default-features = false }
unet-orml-currencies = {  path = '../pallets/unet-orml-currencies', default-features = false }
unet-orml-nft = {  path = '../pallets/unet-orml-nft', default-features = false }
unet-traits = {  path = '../pallets/unet-traits', default-features = false }
unet-nft = {  path = '../pallets/unet-nft', default-features = false }
unet-order = {  path = '../pallets/unet-order', default-features = false }
unet-auction = {  path = '../pallets/unet-auction', default-features = false }
unet-config = {  path = '../pallets/unet-config', default-features = false }
unet-rpc-runtime-api = {  path = '../pallets/unet-rpc/runtime-api', default-features = false }
chain-extension = {  path = '../pallets/chain-extension', default-features = false }

[features]
default = ['std']
std = [
    # External Dependencies
	'codec/std',
    'serde/std',
	'scale-info/std',
    'log/std',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'beefy-primitives/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',

	## Substrate Frame Dependencies
	'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'frame-election-provider-support/std',

	## Substrate Pallet Dependencies
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-beefy-mmr/std',
    'pallet-beefy/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-mmr-primitives/std',
    'pallet-mmr/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-proxy/std',
    'pallet-treasury/std',
    'pallet-democracy/std',
    'pallet-scheduler/std',
    'pallet-collective/std',
    'pallet-society/std',
    'pallet-utility/std',
    'pallet-identity/std',
	'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
	'pallet-uniques/std',

	# Octopus Dependencies
	## Octopus Pallet Dependencies
	'pallet-octopus-appchain/std',
    'pallet-octopus-lpos/std',
    'pallet-octopus-upward-messages/std',

    # Frontier Dependencies
    ## Frontier Primitive Dependencies
    'fp-evm/std',
    'fp-rpc/std',

    ## Frontier Primitive Dependencies
	'pallet-base-fee/std',
    'pallet-ethereum/std',
	'pallet-evm/std',

	# Unet Dependencies
	## Unet Pallet Dependencies
	'unet-orml-tokens/std',
    'unet-orml-traits/std',
    'unet-orml-currencies/std',
    'unet-orml-nft/std',
    'unet-traits/std',
    'unet-nft/std',
    'unet-order/std',
    'unet-auction/std',
    'unet-config/std',
    'unet-rpc-runtime-api/std',
    'chain-extension/std',
]
runtime-benchmarks = [
    # External Dependencies
	'hex-literal',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'sp-runtime/runtime-benchmarks',

	## Substrate Frame Dependencies
	'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'frame-election-provider-support/runtime-benchmarks',

	## Substrate Pallet Dependencies
	'pallet-assets/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-im-online/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-proxy/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-society/runtime-benchmarks',
    'pallet-utility/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
]
